--- a/sass/page/_consumptionRecord.scss
+++ b/sass/page/_consumptionRecord.scss
@@ -67,12 +67,19 @@
     align-items: flex-end;
 }
 
+.consumptionRecord_bouncing main .Payment {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
 .consumptionRecord_bouncing main .record .recordFooter .buttonGroup {
     padding-top: 1em;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
+
 
 /*
 .consumptionRecord_bouncing main::-webkit-scrollbar {
