--- a/html/layout/supportPage.html
+++ b/html/layout/supportPage.html
@@ -11,11 +11,11 @@
                     <img src="assets\image\supportPage_close_icon.svg" alt="" @click="openSelect = !openSelect">
                 </article>
                 <article class="selectBtn">
-                    <div @click="openRobotBool = true">
+                    <div @click="openRobot">
                         <img src="assets/image/supportPage_robot_icon.svg" alt="" class="transparent">
                         <p>智能客服</p>
                     </div>
-                    <div @click="openPeopleBool = true">
+                    <div @click="openPeople">
                         <img src="assets/image/supportPage_people_icon.svg" alt="" class="transparent">
                         <p>線上客服</p>
                     </div>
@@ -88,14 +88,48 @@
                     // {message: '', class: 'meTxt'},
                     // {message: '', class: 'robotTxt'},
                 ],
+                chatroomData:{},
             },
             components: {
                 messageart: {
-                    props: ['message','class'],
-                    template: `<article class=""><p class="small">{{message}}</p></article>`,
+                    props: ['message','classS'],
+                    template: `<article :class="classS"><p class="small">{{message}}</p></article>`,
                 },
             },
             methods: {  //函數大部分放在這裡
+                openRobot(){
+                    this.openRobotBool = true;
+                    messageObject = [];
+                    document.querySelector('.txtArea').innerHTML = "";
+                },
+                openPeople(){
+                    if(memData){
+                        this.openPeopleBool = true;
+                        messageObject = [];
+                        document.querySelector('.txtArea').innerHTML = "";
+                        axios({
+                            method:'post',
+                            url:`php/supChatroomLoad.php?memNo=${memData.memNo}`,
+                        }).then((res)=>{
+                            if(res.data == '失敗'){
+                                axios({
+                                    method:'post',
+                                    url:"php/robSupKey.php",
+                                }).then((res)=>{
+                                    // console.log("從php傳來的東西",res)
+                                    this.chatroomData = res.data;
+                                }).catch((err)=>{ console.log(err) })
+                
+                            }else{
+
+                            }
+                        }).catch((err)=>{ console.log(err) })
+                    }else{
+                        alert("請登入");
+                        location = 'login.html';
+                    }
+                   
+                },
                 closedRoom(){
                     this.openPeopleBool = false;
                     this.openRobotBool = false;
@@ -109,7 +143,7 @@
                     }).then((res)=>{
                         console.log("從php傳來的東西",res)
                         setTimeout(()=>{
-                            this.messageObject.push({message: `${res.data[0].ans}` , class: 'robotTxt'})
+                            this.messageObject.push({message: `${res.data[0].ans}` , classS: 'robotTxt'})
                             setTimeout(()=>{document.querySelector('.txtArea article:last-of-type').scrollIntoView({ behavior: 'smooth' });},100)
                     },500)
                     }).catch((err)=>{
