--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -1,8 +1,11 @@
 .indexWrap{
     background: url(../../assets/image/index_background.jpg) no-repeat center / 100% auto;
+    // object-fit: cover;
     width: 100%;
     height: 100vh;
     position: relative;
+    //滿版
+    background-size: cover;
 
     .logo{
         width: 200px;
