--- a/galleryAll/gallery/easeGallery02.css
+++ b/galleryAll/gallery/easeGallery02.css
@@ -1,7 +1,8 @@
 .ease{
     margin: auto;
     text-align: center;
-    margin-top: 100px;
+    /* margin-top: 100px; */
+    margin-left: 20%;
     width: 500px;
     animation: xx 5s infinite alternate-reverse;
     /* position: relative; */
@@ -14,6 +15,7 @@
 .ease img{
     display: block;
     animation: ease 1s infinite alternate-reverse;
+    width: 350px;
 }
 @keyframes xx {
     0% {
