--- a/galleryAll/gallery/flipClick.css
+++ b/galleryAll/gallery/flipClick.css
@@ -17,10 +17,10 @@ min-height: 100vh;
 } */
 
 .card {
-    margin: 100px auto 0;
-    width: 400px;
-    height: 300px;
-    /* height: 600px; */
+    /* margin: 100px auto 0; */
+    width: 320px;
+    /* height: 300px; */
+    /* height: 380px; */
     perspective: 1000px;
 }
 
@@ -40,18 +40,19 @@ min-height: 100vh;
 
 .card_face {
     position: absolute;
-    width: 400px;
-    height: 300px;
+    width: 320px;
+    /* height: 600px; */
     /* height: 100%; */
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     overflow: hidden;
     /* border-radius: 16px; */
     box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+    margin-top: -30%;
 }
 .card_face img{
-    width: 400px;
-    height: 300px;
+    width: 320px;
+    height: 380px;
 }
 
 .card_face--front {
@@ -60,6 +61,7 @@ min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 380px;
 }
 
 /* .card__face--front h2 {
@@ -68,10 +70,11 @@ min-height: 100vh;
 } */
 
 .card_face--back {
-    width: 400px;
+    width: 320px;
     background-color: blue;
     /* background-color: var(--light); */
     transform: rotateY(180deg);
+    height: 380px;
 }
 
 .card_content {
@@ -92,10 +95,11 @@ min-height: 100vh;
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: linear-gradient(to bottom left, var(--primary) 10%, var(--secondary) 115%);
+    /* background-image: linear-gradient(to bottom left, var(--primary) 10%, var(--secondary) 115%); */
     z-index: -1;
     border-radius: 0px 0px 50% 0px;
 }
 .card_body h3{
     text-align: center;
+    padding-top: 30%;
 }
