--- a/sass/page/_backArticle.scss
+++ b/sass/page/_backArticle.scss
@@ -10,10 +10,12 @@
             grid-template-columns:.5fr .5fr 1.5fr 1fr 1fr 1fr .5fr 1fr; 
         -webkit-column-gap: 10px;
                 column-gap: 10px;
-        background-color: #bbbbbb;
+        background-color: #ffffff;
+        border-bottom: 1px solid #14141430;
         font-size: 16px;
-        color: #000000;
+        color: #141414;
         font-weight: bold;
+        text-align: center;
     }
     /* 文章清單 */
     .articleList{
@@ -30,31 +32,39 @@
         background-color: #ffffff;
         font-size: 16px;
         color: #000000;
-        font-weight: bold;
+        font-weight: normal;
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
+        text-align: center;
     }
     .articleList:hover {
-        background-color: #f8f2ed;
+        background-color: #39489710;
     }
     .articleList li {
         white-space: nowrap;
         /* 不斷行 */
-        overflow: hidden;
+        // overflow: hidden;
         /* 隱藏 */
         text-overflow: ellipsis;
         /* 出現省略符號 */
     }
-    .articleList li:last-child {
-        box-sizing: border-box;
-        padding: 5%;
-        background-color: #6599e8;
-        border-radius: 15px;
-        text-align: center;
-        color: #ffffff;
-    }
-    .articleList li:last-child:hover {
-        cursor: pointer;
+}
+
+.articleLigthtBox{
+    .txtArea{
+        line-height: 2;
+        hr{
+            border: 1px solid #14141420;
+        }
+        button{
+            position: fixed;
+            bottom: 8%;
+            right: 8%;
+            margin: 1em 0;
+        }
+        .pic img{
+            width: 30%;
+        }
     }
 }
