--- a/sass/page/_backAdmin.scss
+++ b/sass/page/_backAdmin.scss
@@ -10,10 +10,12 @@
             grid-template-columns: 1fr 1fr 1fr 1fr 1fr .8fr;
         -webkit-column-gap: 10px;
                 column-gap: 10px;
-        background-color: #bbbbbb;
+        background-color: #ffffff;
+        border-bottom: 1px solid #14141430;
         font-size: 16px;
-        color: #000000;
+        color: #141414;
         font-weight: bold;
+        text-align: center;
     }
     /* 會員清單 */
     .memberList{
@@ -30,10 +32,11 @@
         background-color: #ffffff;
         font-size: 16px;
         color: #000000;
-        font-weight: bold;
+        font-weight: normal;
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
+        text-align: center;
     }
     .memberList:hover {
         background-color: #f8f2ed;
@@ -41,20 +44,24 @@
     .memberList li {
         white-space: nowrap;
         /* 不斷行 */
-        overflow: hidden;
+        // overflow: hidden;
         /* 隱藏 */
         text-overflow: ellipsis;
         /* 出現省略符號 */
     }
-    .memberList li:last-child {
-        box-sizing: border-box;
-        padding: 5%;
-        background-color: #6599e8;
-        border-radius: 15px;
-        text-align: center;
-        color: #ffffff;
-    }
-    .memberList li:last-child:hover {
-        cursor: pointer;
+}
+.newRowLigthtBox, .adminLigthtBox{
+    .txtArea{
+        line-height: 3;
+        
+        hr{
+            border: 1px solid #14141420;
+        }
+        button{
+            position: fixed;
+            bottom: 8%;
+            right: 8%;
+            margin: 1em 0;
+        }
     }
 }
