--- a/sass/page/_backObj.scss
+++ b/sass/page/_backObj.scss
@@ -10,10 +10,12 @@
             grid-template-columns: 1fr 1fr 1fr;
         -webkit-column-gap: 10px;
                 column-gap: 10px;
-        background-color: #bbbbbb;
+        background-color: #ffffff;
+        border-bottom: 1px solid #14141430;
         font-size: 16px;
-        color: #000000;
+        color: #141414;
         font-weight: bold;
+        text-align: center;
     }
     /* 會員清單 */
     .memberList{
@@ -30,18 +32,19 @@
         background-color: #ffffff;
         font-size: 16px;
         color: #000000;
-        font-weight: bold;
+        font-weight: normal;
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
+        text-align: center;
     }
     .memberList:hover {
-        background-color: #f8f2ed;
+        background-color: #39489710;
     }
     .memberList li {
         white-space: nowrap;
         /* 不斷行 */
-        overflow: hidden;
+        // overflow: hidden;
         /* 隱藏 */
         text-overflow: ellipsis;
         /* 出現省略符號 */
@@ -59,5 +62,19 @@
     }
     .memeberTitle li:last-child:hover {
         cursor: pointer;
+    }
+}
+.objNewLigthtBox{
+    .txtArea{
+        p{
+            line-height: 2;
+        }
+        
+        hr{
+            border: 1px solid #14141420;
+        }
+        input{
+            margin: 0.5em 0;
+        }
     }
 }
