--- a/sass/page/_backRobSup.scss
+++ b/sass/page/_backRobSup.scss
@@ -6,10 +6,17 @@
             width: 100%;
         }
         .robSupTitle{
+            background-color: #ffffff;
+            border-bottom: 1px solid #14141430;
+            font-size: 16px;
+            color: #141414;
+            font-weight: bold;
+            text-align: center;
+
             th{
                
                 box-sizing: border-box;
-                padding: 0.5em 0.5em;
+                padding: 0.5em 2em;
                 text-align: center;
                 &:nth-child(1){
                     width: 8em;
@@ -88,9 +95,9 @@
                     height:100%;
                 }
             }
-            div:nth-child(4){
+            // div:nth-child(4){
                 
-            }
+            // }
         }
        
 
