--- a/html/layout/backheader.html
+++ b/html/layout/backheader.html
@@ -41,7 +41,7 @@
                 <!-- <p>火爆猴</p> -->
                 <p></p>
             </div>
-            <button class="loginOut whiteRound">登入</button>
+            <button class="loginOut whiteRound">登出</button>
         </div>
        
     </section>
