--- a/sass/layout/_galleryBounceDoll.scss
+++ b/sass/layout/_galleryBounceDoll.scss
@@ -25,7 +25,7 @@
 }
 #lightBoxMonkey{
     // 畫廊彈跳公仔
-    #closeLightBoxMonkey{
+    #bounceDoll{
         width: 100%;
         height: 100%;
         .ball{
